--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <header>
         <h1 class="heading-1">Reliable, efficient delivery</h1>
         <h1 class="heading-2">Powered by Technology</h1>
@@ -66,7 +66,7 @@
           <img src="images/icon-calculator.svg" alt="calculator-img" />
         </div>
       </section>
-    </div>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
