--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <main class="container">
+    <div class="container">
       <header>
         <h1 class="heading-1">Reliable, efficient delivery</h1>
         <h1 class="heading-2">Powered by Technology</h1>
@@ -40,7 +40,7 @@
           <br />points to ensure that your project is successful
         </p>
       </header>
-      <section class="grid">
+      <main class="grid">
         <div class="box box-1">
           <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
@@ -65,8 +65,8 @@
           </p>
           <img src="images/icon-calculator.svg" alt="calculator-img" />
         </div>
-      </section>
-    </main>
+      </main>
+    </div>
     <footer>
       <p class="attribution">
         Challenge by
